This commit closes #3, #4. It also reaches the milestone of having all objects promoted to their according regions. Some patches had to be made to the code and there's still lots of comments (to avoid losing the old implementations). This commit also includes a remade script and the new C preprocessor flags that can be passed to the program. The regionMark class also had a number of its methods remade to cope with the new implementation. The code marked as "Not in use yet" means that could still be used in the future.